# Horae

./: .dockerignore  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  K-EmoPhone Phone-Only Pipeline — Results Walkthrough.md  Makefile  README.md  agent.py  api.py  config.py  credentials.json  db.py  instructions.md  main.py  pdf_embedding_process.md  pyproject.toml  readme.md  requirements.txt  settings.gradle.kts  setup-secrets.sh  startup.sh  test_api.py
.claude/: launch.json
Mindful_Rag/: app.py  ingest_intro_concl.py
Mindful_Rag_Extract/: app.py  demo_evaluators.py  evaluators.py  ingest_csv.py  requirements.txt  test_evaluators.py  verify_chroma.py
Mindful_Rag_pdf/: app.py  ingest_raw.py  requirements.txt
SupplementalCodes/: analysis.py  modern_models.py
android_client/: readme.md
app/: build.gradle.kts
app-context/: README.md  architecture.md  backend-pipeline.md  data-models.md  mobile-ui.md  overview.md
autolife_android_client/: build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: AutoLife- Automatic Life Journaling with Smartphones.md  battery_assessment_irb.md  deployment.md  github-issue-resolution-2026-05-20.md  ios-behavioral-markers-task.md  per-human-data-process-simulation-proposal.md  rotate-secrets.md
gradle/: libs.versions.toml
memory/: __init__.py  mental_health_tracker.py  storage.py  user_preferences.py  wellbeing_tracker.py
project_files/: Project Outline.md
scripts/: _bootstrap.py  demo_evaluators.py  ingest.py  run_app.py  verify_chroma.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  (+11 more)
(+418 files in other folders)
