[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindful-rag"
version = "0.1.0"
description = "Student wellness RAG app and ingestion pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "google-genai>=0.7.0",
  "langchain-chroma>=0.1.0",
  "chromadb>=0.4.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "streamlit>=1.28.0",
  "python-dotenv>=1.0.0",
  "pymupdf>=1.23.0",
  "thefuzz>=0.20.0",
  "python-Levenshtein>=0.21.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
mindful-rag = "mindful_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
